jsoup changelog

*** Release 1.3.4 [PENDING]

 * Added ability to load and parse HTML from an input stream.

 * Implemented Node.clone() to create deep, independent copies of Nodes, Elements, and Documents.

 * Added :not() selector, to find elements that do not match the selector. E.g. div:not(.logo) finds divs that
   do not have the "logo" class name.

 * Relaxed parse rules of H1 - H6, to allow nested content. This is against spec, but matches browser and publisher
   behaviour.

 * Relaxed parse rule of SPAN to treat as block, to allow nested block content.

 * Fixed issue in jsoup.connect when extracting character set from content-type header; now supports quoted
   charset declaration.
   
 * Fixed support for jsoup.connect to follow redirects between http & https URLs.
   <http://github.com/jhy/jsoup/issues/issue/37>

 * Implemented DataNode.setWholeData() to allow updating of script and style data contents.

 * Document normalisation now more correctly enforces document structure.

 * Support node.outerHtml() method when node has no parent.

 * Fixed support for HTML entities with numbers in name (e.g. &frac34, &sup1).

 * Fixed absolute URL generation from relative URLs which are only query strings.

*** Release 1.3.3 [2010-Sep-19]
 * Implemented Elements.empty() and Elements.remove(). This allows easy element removal, like:
    doc.select("iframe").remove();
    
 * Fixed issue in Entities when unescaping &#36; ("$")
   <http://github.com/jhy/jsoup/issues/issue/34>

 * Added restricted XHTML output entity option
   <http://github.com/jhy/jsoup/issues/issue/35>

*** Release 1.3.2 [2010-Aug-30]
 * Treat HTTP headers as case insensitive in Jsoup.Connection. Improves compatibility for HTTP responses.

 * Improved malformed table parsing by implementing ignorable end tags.

*** Release 1.3.1 [2010-Aug-23]
 * Removed dependency on Apache Commons-lang. Jsoup now has no external dependencies.
